--- a/analysis/basic_stats.Rmd
+++ b/analysis/basic_stats.Rmd
@@ -16,7 +16,7 @@ output:
 ```{r loadd, results='asis', echo=FALSE, include=FALSE,}
 knitr::opts_chunk$set(echo = TRUE, warning=FALSE)
 
-#devtools::install_github("RamiKrispin/coronavirus")
+devtools::install_github("RamiKrispin/coronavirus")
 #install.packages('wpp2017')
 
 
@@ -35,6 +35,7 @@ If you want to know why Italy just quarantined 18 million people, read on.
 suppressMessages(suppressWarnings( library(tidyverse)))
 library(coronavirus)
 library(wpp2017)
+library(lubridate)
 data(pop)
 
 pop %>% 
@@ -143,6 +144,7 @@ coronavirus %>%
 
 
 # Total cumulative confirmed cases as a population rate
+ - greater than 200 cases, or Singapore or Australia
 
 Note, Japan had -1 cases on day 2
 
@@ -158,14 +160,66 @@ coronavirus %>%
   summarise( cases=sum(cases), population = min(`2015`)) %>%
   ungroup() %>%
   group_by( Country.Region) %>%
- # filter( Country.Region=='Japan' ) %>%
-  filter( sum(cases) > 200 ) %>%
+  filter( sum(cases) > 200  | Country.Region=='Singapore' | Country.Region=='Australia') %>%
   arrange( ndays, .by_group=TRUE) %>%
   mutate( cumcases = cumsum(cases), rate = cumsum(cases ) / population  ) %>%
   ggplot(aes( ndays, rate, color=Country.Region)) +
   geom_line() +
   scale_y_log10() +
   scale_x_continuous()
+
+
+```
+
+
+
+# New cases population rate by week
+
+
+```{r}
+
+coronavirus %>% 
+  mutate( name = ifelse(is.na(name), Country.Region, name)) %>%
+  inner_join(pop, by='name' ) %>% 
+  filter( type=='confirmed' ) %>%
+  group_by( Country.Region ) %>%
+  mutate(week = week(date) ) %>%
+  group_by( Country.Region, week ) %>%
+  summarise( cases=sum(cases), population = min(`2015`)) %>%
+  ungroup() %>%
+  group_by( Country.Region) %>%
+  # filter( Country.Region=='Japan' ) %>%
+  filter( sum(cases) > 200  | Country.Region=='Singapore' | Country.Region=='Australia') %>%
+  mutate( rate = cases  / population  ) %>%
+  ggplot(aes( week, rate, color=Country.Region)) +
+  geom_line() +
+  scale_y_log10() +
+  scale_x_continuous()
+
+
+```
+
+
+# New cases population rate by day, smoothed
+
+
+```{r}
+
+coronavirus %>% 
+  mutate( name = ifelse(is.na(name), Country.Region, name)) %>%
+  inner_join(pop, by='name' ) %>% 
+  filter( type=='confirmed' ) %>%
+  group_by( Country.Region ) %>%
+  group_by( Country.Region, date ) %>%
+  summarise( cases=sum(cases), population = min(`2015`)) %>%
+  ungroup() %>%
+  group_by( Country.Region) %>%
+  # filter( Country.Region=='Japan' ) %>%
+  filter( sum(cases) > 200  | Country.Region=='Singapore' | Country.Region=='Australia') %>%
+  mutate( rate = cases  / population  ) %>%
+  ggplot(aes( date, rate, color=Country.Region)) +
+  geom_smooth() +
+  scale_y_log10() 
 
 ```
 
