wflow_publish("analysis/basic_stats.Rmd")

--- a/analysis/basic_stats.Rmd
+++ b/analysis/basic_stats.Rmd
@@ -292,3 +292,15 @@ coronavirus %>%
 
 
 ```
+
+```{r risk}
+
+coronavirus %>% 
+filter( Country.Region %in% c('Australia')) %>%
+filter(Province.State=='Victoria') %>%
+filter( type=='confirmed') %>%
+summarise(sum(cases))
+
+
+```
+
